--- a/scss/_login.scss
+++ b/scss/_login.scss
@@ -21,6 +21,8 @@
         width: 50%;
         @include button-beginnings;
         display: flex;
+        justify-content: center;
+        align-items: center;
     }
 
     &__icon {
