--- a/scss/_mixins.scss
+++ b/scss/_mixins.scss
@@ -38,5 +38,14 @@
     padding-top: .5rem;
     padding-bottom: .5rem;
     cursor: pointer;
-    @include center;
+}
+
+@mixin blue-btn {
+    @include button-beginnings;
+    font-weight: bold;
+    font-size: 1.5rem;
+    border: none;
+    background: $feature-colour;
+    color: white;
+    width: 17rem;
 }
