--- a/scss/_resets.scss
+++ b/scss/_resets.scss
@@ -25,7 +25,15 @@ a{
 
 input {
     text-align: center;
-  }
+}
+
+input:focus{
+    border: none !important;
+}
+
+input::placeholder:focus {
+    color: transparent !important;
+}
   
   ::-webkit-input-placeholder {
     text-align: center;
