--- a/css/style.css
+++ b/css/style.css
@@ -21,6 +21,12 @@ a {
 input {
   text-align: center; }
 
+input:focus {
+  border: none !important; }
+
+input::placeholder:focus {
+  color: transparent !important; }
+
 ::-webkit-input-placeholder {
   text-align: center; }
 
@@ -30,6 +36,20 @@ input {
 li {
   list-style: none;
   cursor: pointer; }
+
+.icon-container {
+  width: 100%;
+  height: 60vh;
+  position: relative; }
+
+.icon-pattern {
+  width: 100%;
+  height: 60vh;
+  display: flex;
+  flex-wrap: wrap; }
+  .icon-pattern__img {
+    width: 9%;
+    padding: 1.7rem; }
 
 .hobbi-logo {
   font-family: "Shrikhand", cursive;
@@ -43,6 +63,12 @@ li {
   padding: 1rem;
   letter-spacing: .1rem; }
 
+.right-page {
+  float: right;
+  width: 80vw;
+  height: 100vh;
+  overflow-y: scroll; }
+
 .p-text {
   font-family: "Roboto", sans-serif;
   color: #606060;
@@ -52,6 +78,12 @@ li {
   font-family: "Roboto", sans-serif;
   color: #C4C4C4;
   font-size: 1.5rem; }
+
+.h1-text {
+  font-family: "Roboto", sans-serif;
+  color: #606060;
+  font-size: 2.5rem;
+  margin-bottom: 2rem; }
 
 .h2-text {
   font-family: "Roboto", sans-serif;
@@ -63,6 +95,9 @@ li {
   width: 100vw;
   border-top: 1px dashed #cecece; }
 
+.hide {
+  display: none !important; }
+
 .side-nav {
   width: 20vw;
   height: 100vh;
@@ -73,11 +108,15 @@ li {
   flex-direction: column;
   padding-top: 5rem;
   padding-bottom: 5rem;
-  float: left; }
+  float: left;
+  position: relative; }
   .side-nav__logo-div {
     display: flex; }
   .side-nav__ul {
-    padding-bottom: 30rem; }
+    padding-bottom: 30rem;
+    position: absolute;
+    top: 25%;
+    left: 30%; }
   .side-nav__li {
     padding-top: 1rem; }
   .side-nav__login-container {
@@ -91,9 +130,6 @@ li {
     padding-top: .5rem;
     padding-bottom: .5rem;
     cursor: pointer;
-    display: flex;
-    justify-content: center;
-    align-items: center;
     width: 10rem;
     margin-bottom: 1rem;
     background: none; }
@@ -103,11 +139,26 @@ li {
     padding-top: .5rem;
     padding-bottom: .5rem;
     cursor: pointer;
-    display: flex;
-    justify-content: center;
-    align-items: center;
     width: 10rem;
     background: white; }
+  .side-nav__profile-div {
+    display: flex;
+    position: absolute;
+    top: 90%;
+    left: 28%;
+    display: flex;
+    justify-content: center;
+    align-items: center; }
+  .side-nav__profile-div-img {
+    width: 3rem;
+    height: 3rem;
+    border-radius: 360px;
+    margin-right: 1rem;
+    border: 3px solid white;
+    box-shadow: -2px 2px 5px lightgray;
+    cursor: pointer; }
+  .side-nav__name {
+    cursor: pointer; }
 
 .top-nav {
   width: 100vw;
@@ -116,41 +167,33 @@ li {
   display: flex;
   align-items: center; }
 
-.home-page {
-  float: right;
-  width: 80vw;
-  height: 100vh;
-  overflow-y: scroll; }
-
 .session-host-btn {
-  width: 15rem;
   border: 1px solid #606060;
   border-radius: 360px;
   padding-top: .5rem;
   padding-bottom: .5rem;
   cursor: pointer;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  font-weight: bold;
+  font-size: 1.5rem;
   border: none;
   background: #5DCBDC;
-  box-shadow: -2px 2px 5px lightgray;
+  color: white;
+  width: 17rem;
   position: absolute;
   top: 5%;
-  left: 85%;
-  padding-top: .5rem;
-  padding-bottom: .5rem;
-  color: white !important;
+  left: 83%;
   z-index: 100; }
 
 .landing-section {
   width: 100%;
-  height: 60%;
-  position: relative;
+  height: 60vh;
   display: flex;
   justify-content: center;
-  align-items: center; }
-  .landing-section__p {
+  align-items: center;
+  position: absolute;
+  top: 0;
+  left: 0; }
+  .landing-section__h1 {
     font-family: "Shrikhand", cursive;
     background: #5DCBDC;
     background: -webkit-linear-gradient(to bottom right, #5DCBDC 0%, #5DDCC5 100%);
@@ -177,7 +220,8 @@ li {
   .available-hobbies__img {
     width: 17rem;
     height: 17rem;
-    border-radius: 10px; }
+    border-radius: 10px;
+    object-fit: cover; }
 
 .how-it-works {
   width: 100%;
@@ -239,9 +283,7 @@ li {
     padding-top: .5rem;
     padding-bottom: .5rem;
     cursor: pointer;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    font-weight: bold;
     border: none;
     background: #5DCBDC;
     box-shadow: -2px 2px 5px lightgray;
@@ -324,8 +366,7 @@ li {
     cursor: pointer;
     display: flex;
     justify-content: center;
-    align-items: center;
-    display: flex; }
+    align-items: center; }
   .login-div__icon {
     width: 1rem;
     height: 1rem;
@@ -341,10 +382,7 @@ li {
     border-radius: 360px;
     padding-top: .5rem;
     padding-bottom: .5rem;
-    cursor: pointer;
-    display: flex;
-    justify-content: center;
-    align-items: center; }
+    cursor: pointer; }
   .login-div__input {
     background: #F9F9F9; }
   .login-div__btn {
@@ -384,8 +422,7 @@ li {
     cursor: pointer;
     display: flex;
     justify-content: center;
-    align-items: center;
-    display: flex; }
+    align-items: center; }
   .sign-up-div__icon {
     width: 1rem;
     height: 1rem;
@@ -401,10 +438,7 @@ li {
     border-radius: 360px;
     padding-top: .5rem;
     padding-bottom: .5rem;
-    cursor: pointer;
-    display: flex;
-    justify-content: center;
-    align-items: center; }
+    cursor: pointer; }
   .sign-up-div__input {
     background: #F9F9F9; }
   .sign-up-div__btn {
@@ -414,5 +448,192 @@ li {
     outline: none; }
   .sign-up-div__input:focus::placeholder {
     color: transparent; }
+
+.profile-div {
+  width: 100%;
+  height: 50vh;
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  padding-left: 5rem; }
+  .profile-div__img {
+    width: 10rem;
+    height: 10rem;
+    border-radius: 360px;
+    object-fit: cover;
+    margin-right: 3rem; }
+  .profile-div__profile-info {
+    width: 50%;
+    display: flex;
+    flex-direction: column; }
+
+.sessions {
+  width: 100%;
+  height: 50vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: flex-start;
+  padding-left: 5rem; }
+  .sessions__container {
+    width: 100%;
+    display: flex;
+    justify-content: flex-start;
+    align-items: center; }
+  .sessions__div {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    margin-top: 2rem;
+    margin-right: 3rem; }
+  .sessions__img {
+    width: 17rem;
+    height: 17rem;
+    border-radius: 10px; }
+
+.reviews {
+  width: 65%;
+  min-height: 50vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  padding-left: 5rem; }
+  .reviews__div {
+    width: 50%;
+    min-height: 50vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    margin-top: 2rem; }
+  .reviews__profile-div {
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    margin-top: 2rem; }
+  .reviews__img {
+    width: 3rem;
+    height: 3rem;
+    border-radius: 360px;
+    object-fit: cover;
+    margin-right: 1rem; }
+
+.hosting {
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  justify-content: space-evenly;
+  padding-top: 5rem;
+  padding-bottom: 5rem; }
+  .hosting__h1 {
+    font-family: "Roboto", sans-serif;
+    color: #606060;
+    font-size: 2.5rem;
+    margin-bottom: 2rem; }
+  .hosting__form {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column; }
+  .hosting__checkbox {
+    width: 2rem;
+    height: 2rem;
+    outline: 1px solid #C4C4C4;
+    cursor: pointer; }
+  .hosting__checkbox:checked {
+    background: #5DCBDC; }
+  .hosting__div {
+    width: 100ch;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-bottom: 2rem; }
+  .hosting__p {
+    font-family: "Roboto", sans-serif;
+    color: #606060;
+    font-size: 1.5rem;
+    width: 65ch;
+    padding-left: 3rem; }
+  .hosting__contact {
+    text-align: center; }
+  .hosting__btn {
+    border: 1px solid #606060;
+    border-radius: 360px;
+    padding-top: .5rem;
+    padding-bottom: .5rem;
+    cursor: pointer;
+    font-weight: bold;
+    font-size: 1.5rem;
+    border: none;
+    background: #5DCBDC;
+    color: white;
+    width: 17rem;
+    margin-bottom: 3rem; }
+
+.application {
+  width: 100;
+  height: 90vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column; }
+  .application__div {
+    width: 35%;
+    height: 60%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column; }
+  .application__input {
+    border: 1px solid #606060;
+    border-radius: 360px;
+    padding-top: .5rem;
+    padding-bottom: .5rem;
+    cursor: pointer;
+    background: #F8F8F8;
+    margin-bottom: 1rem;
+    padding-left: 2rem;
+    text-align: left; }
+  .application__input:focus {
+    outline: none; }
+  .application__input:focus::placeholder {
+    color: transparent; }
+  .application__input::placeholder {
+    color: #C4C4C4;
+    text-align: left;
+    display: flex;
+    align-items: flex-start; }
+  .application__info-div {
+    width: 100%;
+    display: flex;
+    justify-content: space-between; }
+  .application__name {
+    width: 63%; }
+  .application__age {
+    width: 33%; }
+  .application__email {
+    width: 100%; }
+  .application__contact-number {
+    width: 58%; }
+  .application__city {
+    width: 38%; }
+  .application__description {
+    border-radius: 10px !important;
+    width: 100%;
+    height: 15rem; }
+  .application__btn {
+    border: 1px solid #606060;
+    border-radius: 360px;
+    padding-top: .5rem;
+    padding-bottom: .5rem;
+    cursor: pointer;
+    font-weight: bold;
+    font-size: 1.5rem;
+    border: none;
+    background: #5DCBDC;
+    color: white;
+    width: 17rem; }
 
 /*# sourceMappingURL=style.css.map */
