--- a/scss/_global.scss
+++ b/scss/_global.scss
@@ -1,8 +1,33 @@
+.icon-container {
+    width: 100%;
+    height: 60vh;
+    position: relative;
+}
+
+.icon-pattern {
+    width: 100%;
+    height: 60vh;
+    display: flex;
+    flex-wrap: wrap;
+
+    &__img {
+        width: 9%;
+        padding: 1.7rem;
+    }
+}
+
 .hobbi-logo {
     @include hobbi-heading;
     font-size: 2.2rem;
     padding: 1rem;
     letter-spacing: .1rem;
+}
+
+.right-page {
+    float: right;
+    width: 80vw;
+    height: 100vh;
+    overflow-y: scroll;
 }
 
 .p-text {
@@ -17,6 +42,13 @@
     font-size: 1.5rem;
 }
 
+.h1-text {
+    font-family: $text-font;
+    color: $text-colour;
+    font-size: 2.5rem;
+    margin-bottom: 2rem;
+}
+
 .h2-text {
     font-family: $text-font;
     color: $text-colour;
@@ -27,4 +59,8 @@
 .border-div {
     width: 100vw;
     border-top: 1px dashed #cecece;
+}
+
+.hide {
+    display: none !important;
 }
