--- a/scss/_index.scss
+++ b/scss/_index.scss
@@ -1,32 +1,20 @@
-.home-page {
-    float: right;
-    width: 80vw;
-    height: 100vh;
-    overflow-y: scroll;
-}
-
 .session-host-btn {
-    width: 15rem;
-    @include button-beginnings;
-    border: none;
-    background: $feature-colour;
-    box-shadow: $box-shadow;
+    @include blue-btn;
     position: absolute;
     top: 5%;
-    left: 85%;
-    padding-top: .5rem;
-    padding-bottom: .5rem;
-    color: white !important;
+    left: 83%;
     z-index: 100;
 }
 
 .landing-section {
     width: 100%;
-    height: 60%;
-    position: relative;
+    height: 60vh;
     @include center;
+    position: absolute;
+    top: 0;
+    left: 0;
 
-    &__p {
+    &__h1 {
         @include hobbi-heading;
         font-size: 3rem;
         letter-spacing: .1rem;
@@ -55,6 +43,7 @@
         width: 17rem;
         height: 17rem;
         border-radius: 10px;
+        object-fit: cover;
     }
 }
 
