--- a/scss/_navigation.scss
+++ b/scss/_navigation.scss
@@ -6,6 +6,7 @@
     padding-top: 5rem;
     padding-bottom: 5rem;
     float: left;
+    position: relative;
 
     &__logo-div {
         display: flex
@@ -13,6 +14,9 @@
 
     &__ul {
         padding-bottom: 30rem;
+        position: absolute;
+        top: 25%;
+        left: 30%;
     }
 
     &__li {
@@ -34,6 +38,28 @@
         @include button-beginnings;
         width: 10rem;
         background: white;
+    }
+
+    &__profile-div {
+        display: flex;
+        position: absolute;
+        top: 90%;
+        left: 28%;
+        @include center;
+    }
+
+    &__profile-div-img {
+        width: 3rem;
+        height: 3rem;
+        border-radius: 360px;
+        margin-right: 1rem;
+        border: 3px solid white;
+        box-shadow: $box-shadow;
+        cursor: pointer;
+    }
+
+    &__name {
+        cursor: pointer;
     }
 }
 
