updated draft, listing css issues

--- a/scss/_navigation.scss
+++ b/scss/_navigation.scss
@@ -7,6 +7,7 @@
     padding-bottom: 5rem;
     float: left;
     position: relative;
+    z-index: 1000;
 
     &__logo-div {
         display: flex
