--- a/scss/_profile.scss
+++ b/scss/_profile.scss
@@ -66,6 +66,7 @@
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
+    align-items: flex-start;
     padding-left: 5rem;
 
     &__div {
