--- a/css/style.css
+++ b/css/style.css
@@ -91,6 +91,12 @@ li {
   font-weight: bold;
   font-size: 2.2rem; }
 
+.h3-text {
+  font-family: "Roboto", sans-serif;
+  color: #606060;
+  font-weight: bold;
+  font-size: 1.8rem; }
+
 .border-div {
   width: 100vw;
   border-top: 1px dashed #cecece; }
@@ -109,7 +115,8 @@ li {
   padding-top: 5rem;
   padding-bottom: 5rem;
   float: left;
-  position: relative; }
+  position: relative;
+  z-index: 1000; }
   .side-nav__logo-div {
     display: flex; }
   .side-nav__ul {
@@ -497,6 +504,7 @@ li {
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
+  align-items: flex-start;
   padding-left: 5rem; }
   .reviews__div {
     width: 50%;
@@ -635,5 +643,63 @@ li {
     background: #5DCBDC;
     color: white;
     width: 17rem; }
+
+.host-div {
+  width: 100%;
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  background: white;
+  padding-top: 1rem;
+  padding-bottom: 1rem;
+  padding-right: 3rem;
+  position: -webkit-sticky;
+  /* Safari */
+  position: sticky;
+  top: 0; }
+  .host-div__h2 {
+    font-family: "Roboto", sans-serif;
+    color: #606060;
+    font-size: 1.8; }
+  .host-div__img {
+    width: 4rem;
+    height: 4rem;
+    border-radius: 360px;
+    object-fit: cover;
+    margin-left: 2rem; }
+
+.listing {
+  width: 100%;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
+  padding-left: 10rem;
+  padding-right: 10rem; }
+  .listing__title-div {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: flex-start;
+    margin-top: 2rem;
+    margin-bottom: 2rem; }
+  .listing__img-div {
+    width: 100%;
+    height: 25%;
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 3rem; }
+  .listing__img {
+    width: 49.5%;
+    height: 100%;
+    object-fit: fill; }
+  .listing__img-1 {
+    border-radius: 10px 0px 0px 10px; }
+  .listing__img-2 {
+    border-radius: 0px 10px 10px 0px; }
+  .listing__info-div {
+    margin-bottom: 4rem; }
 
 /*# sourceMappingURL=style.css.map */
