--- a/scss/_global.scss
+++ b/scss/_global.scss
@@ -56,6 +56,13 @@
     font-size: 2.2rem;
 }
 
+.h3-text {
+    font-family: $text-font;
+    color: $text-colour;
+    font-weight: bold;
+    font-size: 1.8rem;
+}
+
 .border-div {
     width: 100vw;
     border-top: 1px dashed #cecece;
