--- a/scss/_about.scss
+++ b/scss/_about.scss
@@ -11,6 +11,7 @@
     }
 
     &__p {
+        @include p-text;
         width: 50ch;
         margin-bottom: 4rem;
     }
@@ -56,6 +57,7 @@
     }
 
     &__p {
+        @include p-text;
         width: 40ch;
     }
 
