--- a/scss/_global.scss
+++ b/scss/_global.scss
@@ -30,38 +30,38 @@
     overflow-y: scroll;
 }
 
-.p-text {
-    font-family: $text-font;
-    color: $text-colour;
-    font-size: 1.5rem;
-}
+// .p-text {
+//     font-family: $text-font;
+//     color: $text-colour;
+//     font-size: 1.5rem;
+// }
 
-.light-p-text {
-    font-family: $text-font;
-    color: $light-text;
-    font-size: 1.5rem;
-}
+// .light-p-text {
+//     font-family: $text-font;
+//     color: $light-text;
+//     font-size: 1.5rem;
+// }
 
-.h1-text {
-    font-family: $text-font;
-    color: $text-colour;
-    font-size: 2.5rem;
-    margin-bottom: 2rem;
-}
+// .h1-text {
+//     font-family: $text-font;
+//     color: $text-colour;
+//     font-size: 2.5rem;
+//     margin-bottom: 2rem;
+// }
 
-.h2-text {
-    font-family: $text-font;
-    color: $text-colour;
-    font-weight: bold;
-    font-size: 2.2rem;
-}
+// .h2-text {
+//     font-family: $text-font;
+//     color: $text-colour;
+//     font-weight: bold;
+//     font-size: 2.2rem;
+// }
 
-.h3-text {
-    font-family: $text-font;
-    color: $text-colour;
-    font-weight: bold;
-    font-size: 1.8rem;
-}
+// .h3-text {
+//     font-family: $text-font;
+//     color: $text-colour;
+//     font-weight: bold;
+//     font-size: 1.8rem;
+// }
 
 .border-div {
     width: 100vw;
