--- a/scss/_mixins.scss
+++ b/scss/_mixins.scss
@@ -11,11 +11,37 @@
     flex-direction: column;
 }
 
-@mixin spread-column {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    flex-direction: column;
+@mixin p-text {
+    font-family: $text-font;
+    color: $text-colour;
+    font-size: 1.5rem;
+}
+
+@mixin light-p-text {
+    font-family: $text-font;
+    color: $light-text;
+    font-size: 1.5rem;
+}
+
+@mixin h1-text {
+    font-family: $text-font;
+    color: $text-colour;
+    font-size: 2.5rem;
+    margin-bottom: 2rem;
+}
+
+@mixin h2-text {
+    font-family: $text-font;
+    color: $text-colour;
+    font-weight: bold;
+    font-size: 2.2rem;
+}
+
+@mixin h3-text {
+    font-family: $text-font;
+    color: $text-colour;
+    font-weight: bold;
+    font-size: 1.8rem;
 }
 
 @mixin colour-gradient {
